# meta_ai_hackthon

./: Dockerfile  README.md  __init__.py  app.py  email_triage_env.py  gitignore  inference.py  openenv.yaml  pyproject.toml  requirements.txt  server.py  test_env.py
server/: __init__.py  app.py
