[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "email-triage"
version = "1.0.0"
description = "A real-world email triage RL environment for OpenEnv"
readme = "README.md"
requires-python = ">=3.11"
authors = [
    {name = "OpenEnv RL Challenge Submission"}
]
license = {text = "MIT"}
keywords = ["openenv", "reinforcement-learning", "email", "triage", "nlp"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Research",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "fastapi==0.115.5",
    "uvicorn[standard]==0.32.1",
    "pydantic==2.10.3",
    "openai>=1.58.1",
    "requests==2.32.3",
    "openenv-core>=0.2.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4",
    "pytest-asyncio>=0.21",
]

[project.scripts]
email-triage-server = "server:main"

[project.urls]
Homepage = "https://github.com/openenv/email-triage"
Documentation = "https://github.com/openenv/email-triage"
Repository = "https://github.com/openenv/email-triage.git"

[tool.setuptools]
packages = ["email_triage_env"]

[tool.setuptools.package-data]
email_triage_env = ["py.typed"]
